minor fix, add github link

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <textarea rows="5" cols="80" id="input-area"></textarea>
   </div>
   <div class="result">
-    <p>Top 10 Keywords and their tf-idf</p>
     <div id="result-box"></div>
   </div>
+  <a href="https://github.com/paradite/tf-idf-keyword" class="bottom">source on GitHub</a>
 </div>
 <script src="app.js"/></script>
 </body>
