filter numbers, fix styling

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
   </div>
   <div class="instruction">
     <p class="">Paste some text below to get keywords using tf-idf</p>
-    <textarea rows="5" cols="80" id="input-area"></textarea>
+    <textarea rows="8" cols="80" id="input-area"></textarea>
   </div>
   <div class="result">
     <div id="result-box"></div>
   </div>
-  <a href="https://github.com/paradite/tf-idf-keyword" class="bottom">source on GitHub</a>
+  <div class="bottom">
+    <a href="https://github.com/paradite/tf-idf-keyword">source on GitHub</a>
+  </div>
 </div>
 <script src="app.js"/></script>
 </body>
