separate docs into a different file

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="https://github.com/paradite/tf-idf-keyword">source on GitHub</a>
   </div>
 </div>
+<script src="docs.js"/></script>
 <script src="app.js"/></script>
 </body>
 </html>
